--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -127,7 +127,7 @@ email = "test@example.org"
 sharing_image = ""
 
 # Twitter username (without @). Used when a visitor shares your site on Twitter.
-twitter = ""
+twitter = "friendorfomite"
 
 ############################
 ## Regional Settings
@@ -137,7 +137,7 @@ twitter = ""
 #   Examples: "Mon, Jan 2, 2006" or "2006-01-02"
 date_format = "Jan 2, 2006"
 #   Examples: "3:04 pm" or "15:04"
-time_format = "3:04 PM"
+time_format = "15:04 PM"
 
 # Address format (choose from the [address_formats] list below or add you own to the list).
 address_format = "en-us"
