--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -71,7 +71,7 @@ diagram = false
 # Privacy pack
 #   Show a cookie consent message to visitors
 #   Anonymize IP in Google Analytics (if enabled)
-privacy_pack = false
+privacy_pack = true
 
 # Enable visitors to edit pages?
 #   `repo` defines the repository URL. `editable` defines which page types can be edited.
@@ -124,7 +124,7 @@ email = "test@example.org"
 ############################
 
 # Default image for social sharing and search engines. Place image in `static/media/` folder and specify image name here.
-sharing_image = ""
+sharing_image = "barkley.jpeg"
 
 # Twitter username (without @). Used when a visitor shares your site on Twitter.
 twitter = "friendorfomite"
