--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -124,7 +124,7 @@ show_related = {post = true}
 ############################
 
 # Default image for social sharing and search engines. Place image in `static/media/` folder and specify image name here.
-sharing_image = "barkley1.jpeg"
+sharing_image = "barkley.jpeg"
 
 # Twitter username (without @). Used when a visitor shares your site on Twitter.
 twitter = "friendorfomite"
